# SearchFlights

./: .env.example  .gitignore  LICENSE  README.md  july-aug.json  pyproject.toml  requirements.txt
docs/: prd.md
src/searchflights/: __init__.py  __main__.py  cli.py  config.py  evaluator.py  formatter.py  models.py  planner.py
src/searchflights/collectors/: __init__.py  base.py  google_flights.py
tests/: conftest.py  test_cli.py  test_evaluator.py  test_formatter.py  test_planner.py
